Added support for mongoDB through docker-compose
